add Statistics FeedbackOptions v.2

--- a/src/components/FeedbackOptions/FeedbackOptions.module.css
+++ b/src/components/FeedbackOptions/FeedbackOptions.module.css
@@ -6,6 +6,10 @@
   margin-right: 15px;
 }
 
+.wrapperButtons button::first-letter {
+  text-transform: uppercase;
+}
+
 .wrapperButtons button:last-child {
   margin-right: 0;
 }
